--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=rentals
+
+spring.datasource.url=jdbc:mysql://localhost:8889/rental?serverTimezone=UTC&createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.hibernate.ddl-auto = update
+
+spring.sql.init.platform = rental
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode = always
+
